Cache rendered pages until their models update, also disabled CSRF protection for posting form

--- a/src/imageboard/templates/imageboard/base.html
+++ b/src/imageboard/templates/imageboard/base.html
@@ -49,5 +49,9 @@
         <script defer src="{% static "imageboard/main.js" %}"></script>
         {% block page_script %}{% endblock %}
     </div>
+
+    <div id="metadata">
+        {% block metadata %}{% endblock %}
+    </div>
 </body>
 </html>
