--- a/src/imageboard/templates/imageboard/board_page.html
+++ b/src/imageboard/templates/imageboard/board_page.html
@@ -40,3 +40,11 @@
 {% block js_templates %}
     {% include 'imageboard/parts/js_templates.html' %}
 {% endblock %}
+
+{% block metadata %}
+    <div class="cache-data">
+        Page generated at {{ cache_data.generated_at|date:config.DATE_TIME_FORMAT }}.
+        Board {{ cache_data.board.hid }} updated at {{ cache_data.updated_at|date:config.DATE_TIME_FORMAT }}.
+        Page {{ cache_data.page }}.
+    </div>
+{% endblock %}
